gcc/testsuite/rust/rustc/ui/integral-variable-unification-error.rs
fn main() {
    let mut x = 2;
    x = 5.0;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

